--- a/gb/23/7/3/n14027415.md
+++ b/gb/23/7/3/n14027415.md
@@ -1,85 +1,76 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：鹦鹉依偎在主人孕肚上等胎儿“孵化”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14027417-et-web-cockatoo-emma-1200x720-600x400.jpg" />
 <h6>鹦鹉艾玛坐在莱莉的孕肚上。（莱莉?拉辛提供）
 </h6>
 <hr>
-	<p>【大纪元2023年07月03日讯】（英文大纪元记者Anna Mason报导／艾琛编译）当一对年轻夫妇正在期待他们的孩子出生时，他们发现他们的宠物凤头<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%B9%A6%E9%B9%89.md#1">鹦鹉</a>也开始忙碌着做一些不寻常的事情：它依偎在主人日益隆起的肚子上，耐心地等待孩子的“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AD%B5%E5%8C%96.md#1">孵化</a>”，同时把子宫里的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%83%8E%E5%84%BF.md#1">胎儿</a>误认为是自己的蛋。</p>
-<p>30岁的莱莉（Riley）和32岁的迈卡?拉辛（Micah Rushing）与他们18个月大的女儿和13岁的宠物<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%B9%A6%E9%B9%89.md#1">鹦鹉</a>艾玛（Emma）住在俄勒冈州中部（Central Oregon）。</p>
+	<p>【大纪元2023年07月03日讯】（英文大纪元记者Anna Mason报导／艾琛编译）当一对年轻夫妇正在期待他们的孩子出生时，他们发现他们的宠物凤头鹦鹉也开始忙碌着做一些不寻常的事情：它依偎在主人日益隆起的肚子上，耐心地等待孩子的“孵化”，同时把子宫里的胎儿误认为是自己的蛋。</p>
+<p>30岁的莱莉（Riley）和32岁的迈卡?拉辛（Micah Rushing）与他们18个月大的女儿和13岁的宠物鹦鹉艾玛（Emma）住在俄勒冈州中部（Central Oregon）。</p>
 <p>莱莉是一位堪萨斯州的家庭主妇，当她在2021年4月中旬怀上女儿时，她经历了子宫输卵管造影检查（Hysterosalpingography）和慢性晨吐。</p>
 <p>莱莉在接受《大纪元时报》采访时表示，“在我怀孕的整整九个月里，我几乎是卧床不起。艾玛一直陪着我，钻在被子下面，或者坐在我的肚子上试图筑巢。她非常支持我，说实话，她帮助我们渡过了晨吐和怀孕不适的难关。”</p>
-<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244212-Emma-cocktacoo10-1200x900.jpeg " target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244212-Emma-cocktacoo10-1200x900.jpeg " width="600" b="450" /></a><figcaption class="wp-caption-text">艾玛坐在莱莉的孕肚上。（莱莉?拉辛提供）</figcaption></figure>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244200-Emma-cocktacoo4-1200x1600.jpeg " target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244200-Emma-cocktacoo4-1200x1600.jpeg " width="450" b="599" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
+<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244212-Emma-cocktacoo10-1200x900.jpeg " target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244212-Emma-cocktacoo10-1200x900.jpeg " width="600" b="450" /></a><figcaption class="wp-caption-text">艾玛坐在莱莉的孕肚上。（莱莉?拉辛提供）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244200-Emma-cocktacoo4-1200x1600.jpeg " target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244200-Emma-cocktacoo4-1200x1600.jpeg " width="450" b="599" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
 <p>迈卡六年前从Craigslist网站买到这只凤头鹦鹉。在莱莉怀孕期间，艾玛甚至还试图在莱莉的肚子周围筑巢，在肚子周围走来走去，然后栖息在上面。</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244197-Emma-cocktacoo2-1200x1600.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244197-Emma-cocktacoo2-1200x1600.jpeg" width="450" b="599" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
-<p>当它感觉到<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%83%8E%E5%84%BF.md#1">胎儿</a>在踢时，艾玛会鼓起脸颊以示满足。当这对夫妇把他们的新生儿从医院带回家时，艾玛的母性本能更进一步地显现出来。</p>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244197-Emma-cocktacoo2-1200x1600.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244197-Emma-cocktacoo2-1200x1600.jpeg" width="450" b="599" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
+<p>当它感觉到胎儿在踢时，艾玛会鼓起脸颊以示满足。当这对夫妇把他们的新生儿从医院带回家时，艾玛的母性本能更进一步地显现出来。</p>
 <p>莱莉透露说，“艾玛非常兴奋，她实际上是想把婴儿当作一只小鸟来喂。当然，我们不会让它这样做！”</p>
 <p>当拉辛夫妇把女婴放在摇篮里时，这只鹦鹉第一次见到新来的小主人，艾玛似乎非常高兴，鼓起了它的羽毛。莱莉开玩笑说，“我想艾玛可能很惊讶我们的孩子为什么没有羽毛。”</p>
-<figure style="width: 601px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244196-Emma-cocktacoo1-1200x900.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244196-Emma-cocktacoo1-1200x900.jpeg" width="601" b="451" /></a><figcaption class="wp-caption-text">凤头鹦鹉艾玛与莱莉以及新生儿。（莱莉?拉辛提供）</figcaption></figure>
+<figure style="width: 601px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244196-Emma-cocktacoo1-1200x900.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244196-Emma-cocktacoo1-1200x900.jpeg" width="601" b="451" /></a><figcaption class="wp-caption-text">凤头鹦鹉艾玛与莱莉以及新生儿。（莱莉?拉辛提供）</figcaption></figure>
 <p>艾玛试图把新生儿当作自己的孩子来喂养，睡在她的身边。在过去的一年里，女婴与她的宠物鹦鹉的感情越来越牢固，两人就像姐妹一样。</p>
-<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244211-Emma-cocktacoo17-1200x900.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244211-Emma-cocktacoo17-1200x900.jpeg" width="600" b="450" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
+<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244211-Emma-cocktacoo17-1200x900.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244211-Emma-cocktacoo17-1200x900.jpeg" width="600" b="450" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
 <p>每天早上，当艾玛被带出她的房间时，莱莉的女儿会表现出兴奋的样子。艾玛坐在树栖架上，可以目睹客厅里发生的一切。女婴和艾玛相互交流，一起享受吃零食的乐趣。</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244204-Emma-cocktacoo11-1200x900.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244204-Emma-cocktacoo11-1200x900.jpeg" width="450" b="599" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244204-Emma-cocktacoo11-1200x900.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244204-Emma-cocktacoo11-1200x900.jpeg" width="450" b="599" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
 <p>每当小女孩叫艾玛的名字时，艾玛都会鼓起腮帮子并拍打翅膀来表示自己的兴奋，据拉辛夫妇说，艾玛很喜欢大家叫它的名字。</p>
 <p>然而，由于小女孩现在已经是一个蹒跚学步的孩子了，并且已经学会了抓东西，这对夫妇已经开始让她远离艾玛，因为他们不想让她意外地伤害这只鹦鹉。</p>
 <p>艾玛已经能够完美地融入到拉辛的家庭中，并喜欢和他们在一起，就像他们是它的鸟群一样，甚至和他们一起去旅行。</p>
-<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244203-Emma-cocktacoo7-1200x802.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244203-Emma-cocktacoo7-1200x802.jpeg" width="600" b="401" /></a><figcaption class="wp-caption-text">艾玛与拉辛夫妇。（莱莉?拉辛提供）</figcaption></figure>
-<figure style="width: 601px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244198-Emma-cocktacoo3-1200x555.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244198-Emma-cocktacoo3-1200x555.jpeg" width="601" b="278" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
+<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244203-Emma-cocktacoo7-1200x802.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244203-Emma-cocktacoo7-1200x802.jpeg" width="600" b="401" /></a><figcaption class="wp-caption-text">艾玛与拉辛夫妇。（莱莉?拉辛提供）</figcaption></figure>
+<figure style="width: 601px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244198-Emma-cocktacoo3-1200x555.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244198-Emma-cocktacoo3-1200x555.jpeg" width="601" b="278" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
 <p>这对夫妇认为，不应该把任何生物关在笼子里，让它们与世界隔绝，他们一有机会就把艾玛带出去，并强调这样做对它的成长有好处。</p>
 <p>莱莉说，“鹦鹉是群体性的、很聪明，被关在笼子里会让它们发疯。就像猫狗一样，鸟类也需要脑部刺激。”</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244215-Emma-coctacoo.png" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244215-Emma-coctacoo.png" width="450" b="631" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244215-Emma-coctacoo.png" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244215-Emma-coctacoo.png" width="450" b="631" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
 <p>遇到这个带着心爱的鹦鹉的年轻家庭的人，在最初的惊讶之后，多数人会以极大的热情和兴奋来回应这家人。通常他们会问，这只凤头鹦鹉在公共场合会做什么？</p>
 <p>莱莉分享说，“很多鹦鹉都会咬人，而且非常好斗，但艾玛真的会很兴奋地走上前去。它会飞到他们身上打招呼，亲吻他们并挥羽致意。”</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244201-Emma-cocktacoo5-1200x1601.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244201-Emma-cocktacoo5-1200x1601.jpeg" width="450" b="600" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244201-Emma-cocktacoo5-1200x1601.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/05/05/id5244201-Emma-cocktacoo5-1200x1601.jpeg" width="450" b="600" /></a><figcaption class="wp-caption-text">（莱莉?拉辛提供）</figcaption></figure>
 <p>虽然艾玛不是最会说话的鹦鹉，但它能说几句话，比如，“你好吗”“漂亮的鸟”和“我爱你”等短句。</p>
 <p>艾玛可能是你所见过的最可爱的鸟，但拉辛夫妇承认，它有时也会有破坏性行为。</p>
-<p>在孩子出生之前，拉辛夫妇非常清楚，随着家庭新成员的到来，凤头鹦鹉会变得嫉妒，所以他们尽一切努力让艾玛参与家庭活动，并确保在孩子成长过程中继续给予艾玛所需的关注。</p>
+<p>在孩子出生之前，拉辛夫妇非常清楚，随着家庭新成员的到来，凤头鹦鹉会变得嫉妒，所以他们尽一切努力让艾玛参与家庭活动，并确保在孩子成长过程中继续给予艾玛所需的关注。◇</p>
 <p>观看视频：</p>
-<p><a src="//www.youmaker.com/embed/7d6abfb3-1b73-4269-8a18-87a026967e91?r=16x9&amp;d=30" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p><a src="http://www.youmaker.com/embed/7d6abfb3-1b73-4269-8a18-87a026967e91?r=16x9&amp;d=30" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>（莱莉?拉辛提供）</p>
 <p>责任编辑：高静#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/26/n13530861.md#1">组图：玄凤鹦鹉间的玩耍展现鸟类也有爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/29/n13770025.md#1">组图：凤头鹦鹉嫉妒小主人 现在和他成好友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/2/n13857934.md#1">霸道鹦鹉指挥小主人和宠物猫：吃饭睡觉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906928.md#1">组图：53岁鹦鹉被救 喜欢上新主人小宝宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/1/26/n13530861.md#1">组图：玄凤鹦鹉间的玩耍展现鸟类也有爱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/29/n13770025.md#1">组图：凤头鹦鹉嫉妒小主人 现在和他成好友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/2/n13857934.md#1">霸道鹦鹉指挥小主人和宠物猫：吃饭睡觉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/14/n13906928.md#1">组图：53岁鹦鹉被救 喜欢上新主人小宝宝</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/1/n11293536.md#1" target="_blank">【征文】元正戊：弦高退秦军救郑国后为何拒受重赏</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/3/16/n8928422.md#1" target="_blank">一位伊朗女子的东方缘</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/29/n10435561.md#1" target="_blank">罗思义：一个到死还相信共产党伟大的“学者”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/27/n8533466.md#1" target="_blank">一位医生太太见证医学无法达到的奇迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/28/n14024230.md#1">能让人起死回生的古代医术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009801.md#1">自由的海水：一路向南 遇见春天般温暖的香港</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14027952.md#1">感觉往生的亲人就在身边？ 专家：正常现象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025277.md#1">【未解之谜】新证据出炉？人类已获得UFO！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/6/n14029449.md#1">【晚间新闻】武警少将被捕 谁是习身边最危险的人？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/6/n14029895.md#1">【菁英论坛】传火箭军遭整肃 向美出卖情报？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/6/n14029872.md#1">【新唐人快报】美法官令解密FBI搜查令信息</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028444.md#1">世界上最昂贵的牛 价格高达430万美元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14028328.md#1">1776年7月4日 美国究竟发生了什么</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028890.md#1">平权招生被废后 美企业军队去平权战争开始</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028804.md#1">亲姊发文证实 CoCo李玟离世 享年48岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14028318.md#1">甄珍失联近一年首露面 偕子现身友人生日聚会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028568.md#1">曾莞婷连煮泡面的汤都省 20岁就拥首间套房</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14027999.md#1">帮阿汤哥庆生 10分钟看完他为《不可能》跑27年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14028151.md#1">蓝正龙露面新片首映 今证实：我与幼婷分开了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/16/n13998223.md#1">盐对心脏病不好？盐是能量载体 专家荐1种健康盐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14027952.md#1">感觉往生的亲人就在身边？ 专家：正常现象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028656.md#1">美国梦不再是赚大钱 调查披露民意转向</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14018996.md#1">信用不良？10招快速改善你的信用评分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028828.md#1">吃鲑鱼得了解的事！附详细煎鱼技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307633.md#1">【新闻五人行】官员玩“掼蛋” 中南海也怕？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307724.md#1">【未解之谜】神农架野人之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307546.md#1">【中国禁闻】中国爆盗卖遗体黑色产业链</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/3/n14027415.htm">组图：鹦鹉依偎在主人孕肚上等胎儿“孵化”</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027415.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/3/n14027415.htm">组图：鹦鹉依偎在主人孕肚上等胎儿“孵化”</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/3/n14027415.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
